--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,13 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.1', '7.2']
-        db-versions: ['mysql:5.5','mysql:5.7']
-        oxid-versions: ['dev-b-6.0-ce', 'dev-b-6.1-ce', 'dev-b-6.2-ce']
+        php-versions: ['7.4']
+        db-versions: ['mysql:5.5']
+        oxid-versions: ['dev-b-6.2-ce']
         exclude:
           - php-versions: '7.1'
             oxid-versions: 'dev-b-6.2-ce'    
-    name: Oxid ${{ matrix.oxid-versions }} on PHP ${{ matrix.php-versions }} and DB ${{ matrix.db-versions }}
+    name: Oxid ${{ matrix.oxid-versions }}/PHP ${{ matrix.php-versions }}/DB ${{ matrix.db-versions }}
     services:
       mysql:
         image: ${{ matrix.db-versions }}
@@ -48,7 +48,6 @@ jobs:
         mkdir /tmp/oxid6
         cd /tmp/oxid6
         composer create-project -n --no-progress oxid-esales/oxideshop-project . ${{ matrix.oxid-versions }}
-        composer require oxid-esales/oxideshop-demodata-ce:^v6.0.0
         cp /tmp/oxid6/source/config.inc.php.dist /tmp/oxid6/source/config.inc.php
         sed -i 's|<dbHost>|localhost|; s|<dbName>|oxideshop|; s|<dbUser>|root|; s|<dbPwd>|root|; s|<sShopURL>|http://localhost|; s|<sShopDir>|/tmp/oxid6/source|; s|<sCompileDir>|/tmp/oxid6/source/tmp|; s|\$this->iDebug = 0|\$this->iDebug = 1|' /tmp/oxid6/source/config.inc.php
         sed -i "s|\$this->edition = ''|\$this->edition = 'CE'|" /tmp/oxid6/source/config.inc.php
