Reset shop before test start

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,9 @@ jobs:
         [ -d /tmp/oxid6/vendor/payone-gmbh/oxid-6 ] && { echo "Removing from vendor"; rm -rf /tmp/oxid6/vendor/payone-gmbh/oxid-6; }
         mkdir -p /tmp/oxid6/source/modules/fc/fcpayone
         cp -R $GITHUB_WORKSPACE/* /tmp/oxid6/source/modules/fc/fcpayone
+    - name: Reset shop
+      run: |
+        php /tmp/oxid6/vendor/bin/reset-shop
     - name: Run tests
       # Run composer update to make services available, see #128
       run: |
