--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,33 +42,23 @@ jobs:
       run: sudo /etc/init.d/mysql start
     - name: PHP Syntax Checker
       run: find . -type f -name '*.php' -print0 | xargs -0 -n1 -P4 php -l -n | (! grep -v "No syntax errors detected" )
-
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Setup Oxid 6
       run: |
         mkdir /tmp/oxid6
         cd /tmp/oxid6
-        composer create-project -n --no-progress oxid-esales/oxideshop-project . ${{ matrix.oxid-versions }}
+        composer create-project -n --no-install --no-progress oxid-esales/oxideshop-project . ${{ matrix.oxid-versions }}
+        composer config repositories.payone-gmbh/oxid-6 path $GITHUB_WORKSPACE
+        composer require payone-gmbh/oxid-6:dev-${{ steps.extract_branch.outputs.branch }}
         cp /tmp/oxid6/source/config.inc.php.dist /tmp/oxid6/source/config.inc.php
         sed -i 's|<dbHost>|localhost|; s|<dbName>|oxideshop|; s|<dbUser>|root|; s|<dbPwd>|root|; s|<sShopURL>|http://localhost|; s|<sShopDir>|/tmp/oxid6/source|; s|<sCompileDir>|/tmp/oxid6/source/tmp|; s|\$this->iDebug = 0|\$this->iDebug = 1|' /tmp/oxid6/source/config.inc.php
         sed -i "s|\$this->edition = ''|\$this->edition = 'CE'|" /tmp/oxid6/source/config.inc.php
         sed -i "s|partial_module_paths: null|partial_module_paths: 'fc/fcpayone'|" /tmp/oxid6/test_config.yml
         sed -i "s|shop_path: source|shop_path: '/tmp/oxid6/source'|" /tmp/oxid6/test_config.yml
         chmod -R 777 /tmp/oxid6/source/log
-    - name: Fiddle with plugin if exists, and install fresh
-      # Metapackage 6.2-beta1 doesn't include payone, need to fetch from composer first
-      run: |
-        if ! grep -q "payone-gmbh/oxid-6" /tmp/oxid6/vendor/oxid-esales/oxideshop-metapackage-ce/composer.json; then composer --working-dir=/tmp/oxid6 require payone-gmbh/oxid-6; fi
-        [ -d /tmp/oxid6/source/modules/fc/fcpayone ] && { echo "Removing from modules"; rm -rf /tmp/oxid6/source/modules/fc/fcpayone; }
-        [ -d /tmp/oxid6/vendor/payone-gmbh/oxid-6 ] && { echo "Removing from vendor"; rm -rf /tmp/oxid6/vendor/payone-gmbh/oxid-6; }
-        mkdir -p /tmp/oxid6/source/modules/fc/fcpayone
-        cp -R $GITHUB_WORKSPACE/* /tmp/oxid6/source/modules/fc/fcpayone
-    - name: Reset shop
-      run: |
-        echo "--------------- /tmp/oxid6/test_config.yml"
-        cat /tmp/oxid6/test_config.yml
-        echo "---------- /tmp/oxid6/source/config.inc.php"
-        cat /tmp/oxid6/source/config.inc.php
-        php /tmp/oxid6/vendor/bin/reset-shop
     - name: Run tests
       # Run composer update to make services available, see #128
       run: |
