--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,10 @@ jobs:
         cd /tmp/oxid6
         composer create-project -n --no-install --no-progress oxid-esales/oxideshop-project . ${{ matrix.oxid-versions }}
         composer config repositories.payone-gmbh/oxid-6 path $GITHUB_WORKSPACE
-        composer require "payone-gmbh/oxid-6:dev-${{ steps.extract_branch.outputs.branch }} as v1.3.*-dev"
+        composer config minimum-stability dev
+        composer install --dry-run --no-ansi &> packagelist
+        export PAYONE_PREVIOUS=$(grep payone packagelist | sed 's/.*(\(.*\))/\1/')
+        composer require payone-gmbh/oxid-6:"dev-${{ steps.extract_branch.outputs.branch }} as $PAYONE_PREVIOUS"
         cp /tmp/oxid6/source/config.inc.php.dist /tmp/oxid6/source/config.inc.php
         sed -i 's|<dbHost>|localhost|; s|<dbName>|oxideshop|; s|<dbUser>|root|; s|<dbPwd>|root|; s|<sShopURL>|http://localhost|; s|<sShopDir>|/tmp/oxid6/source|; s|<sCompileDir>|/tmp/oxid6/source/tmp|; s|\$this->iDebug = 0|\$this->iDebug = 1|' /tmp/oxid6/source/config.inc.php
         sed -i "s|\$this->edition = ''|\$this->edition = 'CE'|" /tmp/oxid6/source/config.inc.php
