--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,10 +59,14 @@ jobs:
         cp /tmp/oxid6/source/config.inc.php.dist /tmp/oxid6/source/config.inc.php
         sed -i 's|<dbHost>|localhost|; s|<dbName>|oxideshop|; s|<dbUser>|root|; s|<dbPwd>|root|; s|<sShopURL>|http://localhost|; s|<sShopDir>|/tmp/oxid6/source|; s|<sCompileDir>|/tmp/oxid6/source/tmp|; s|\$this->iDebug = 0|\$this->iDebug = 1|' /tmp/oxid6/source/config.inc.php
         sed -i "s|\$this->edition = ''|\$this->edition = 'CE'|" /tmp/oxid6/source/config.inc.php
-        sed -i "s|partial_module_paths: null|partial_module_paths: 'fc/fcpayone'|" /tmp/oxid6/test_config.yml
-        sed -i "s|shop_path: source|shop_path: '/tmp/oxid6/source'|" /tmp/oxid6/test_config.yml
         chmod -R 777 /tmp/oxid6/source/log
     - name: Run tests
       # Run composer update to make services available, see #128
       run: |
-        php /tmp/oxid6/vendor/bin/runtests /tmp/oxid6/source/modules/fc/fcpayone/tests
+        export PARTIAL_MODULE_PATHS='fc/fcpayone'
+        export SHOP_PATH='/tmp/oxid6/source'
+        export ACTIVATE_ALL_MODULES=1
+        export RUN_TESTS_FOR_SHOP=0
+        export SHOP_SETUP_PATH='/tmp/oxid6/source/Setup'
+        export TEST_DIRS='unit'
+        php /tmp/oxid6/vendor/bin/runtests AllTestsUnit
