--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: mbstring, xdebug
+        extensions: mbstring, xdebug, pdo_mysql
     - name: Check PHP Version
       run: php -v
     - name: Check Composer Version
